add new pages and images

--- a/index.html
+++ b/index.html
@@ -7,16 +7,21 @@
 <body>
     <header>
         <a href="#">Главная</a>
-        <a href="pages/about.html">О нас</a>
-        <a href="pages/contacts.html">Контакты</a>
+        <a href="site/pages/about.html">О нас</a>
+        <a href="site/pages/contacts.html">Контакты</a>
     </header>
     <main>
         <h1>Моя первая веб-страница</h1>
+        <hr>
         <h2>Про меня</h2>
-        <p>Меня зовут Фрейдис. Я работаю <strong>иии</strong>. Решил получше узнать смежную профессию, чтобы разобраться как устроен веб.</p>
-        <p>Живу в Питере. Люблю кататься на велосипеде.</p>
-        <h2>Чему я хочу научиться</h2>
-        <p>На <em>этом</em> курсе я хотел бы научиться создавать сайты с нуля.</p>
+        <p><strong>Всем привет!</strong> Меня зовут Фрейдис, и я <strong>кошка!</strong></p>
+        <a href="https://ru.wikipedia.org/wiki/Кошка">Для начала, вам стоит узнать что такое кошка</a>
+        <p>Теперь вы знаете, поздравляю! &#9872</p>
+        <p>Да-да, вижу что вы крайне удивлены такого повороту событий! Целый сайт об одной маленькой котейке. Возможно, некоторые подумают, что это крайне скучно и уныло.</p>
+        <p>Но это все неправда, на самом деле у кошек очень интересная и насыщенная жизнь!</p>
+        <h2>Один день из моей жизни</h2>
+        <p>Чтобы вам не каалось, что я скучно живу, я покажу вам один день из моей жизни! А также расскажу о других обитателей моей территории!</p>
+        <img src="site/images/cat _1.jpg">
     </main>
     <footer>
         <span>&copy;&nbsp;Skillfactory</span>
