--- a/index.html
+++ b/index.html
@@ -11,20 +11,22 @@
         <a href="site/pages/contacts.html">Контакты</a>
     </header>
     <main>
+        <hr>
         <h1>Моя первая веб-страница</h1>
         <hr>
-        <h2>Про меня</h2>
+        <h2>&#128008 Про меня</h2>
         <p><strong>Всем привет!</strong> Меня зовут Фрейдис, и я <strong>кошка!</strong></p>
         <a href="https://ru.wikipedia.org/wiki/Кошка">Для начала, вам стоит узнать что такое кошка</a>
-        <p>Теперь вы знаете, поздравляю! &#9872</p>
+        <p>Теперь вы знаете, поздравляю! &#9872;</p>
         <p>Да-да, вижу что вы крайне удивлены такого повороту событий! Целый сайт об одной маленькой котейке. Возможно, некоторые подумают, что это крайне скучно и уныло.</p>
         <p>Но это все неправда, на самом деле у кошек очень интересная и насыщенная жизнь!</p>
-        <h2>Один день из моей жизни</h2>
-        <p>Чтобы вам не каалось, что я скучно живу, я покажу вам один день из моей жизни! А также расскажу о других обитателей моей территории!</p>
-        <img src="site/images/cat _1.jpg">
+        <h2>&#128062 Один день из моей жизни</h2>
+        <p>Чтобы вам не казалось, что я скучно живу, я покажу вам один день из моей жизни! А также расскажу о других обитателей моей территории!</p>
+        <img src="site/images/cat _1.jpg" alt="Кошка у компьютера">
     </main>
     <footer>
-        <span>&copy;&nbsp;Skillfactory</span>
+        <hr>
+        <span>&#64 Этот сайт cоздала <del>хозяйка Фрейдис</del> маленькая Фрейдис</span>
     </footer>
 </body>
 </html>
