--- a/site/pages/contacts.html
+++ b/site/pages/contacts.html
@@ -11,15 +11,14 @@
         <a href="#">Контакты</a>
     </header>
     <main>
-        <h1>Как меня найти</h1>
-        <address>
-            Город какой-то,<br>
-            Высокий белый дом<br>
-            Телефона у меня нет<br>
-        </address>        
+        <h1>&#128062 Как меня найти</h1>
+            &#127961 Город какой-то<br>
+            &#8962 Высокий белый дом<br>
+            &#9743 Телефона у меня нет<br>       
     </main>
     <footer>
-            <span>&copy;&nbsp;Skillfactory</span>
+        <hr>
+        <span>&#64 Этот сайт cоздала <del>хозяйка Фрейдис</del> маленькая Фрейдис</span>
     </footer>
 </body>
 </html>
