--- a/site/pages/contacts.html
+++ b/site/pages/contacts.html
@@ -11,14 +11,14 @@
         <a href="#">Контакты</a>
     </header>
     <main>
-        <h1>&#128062 Как меня найти</h1>
-            &#127961 Город какой-то<br>
-            &#8962 Высокий белый дом<br>
-            &#9743 Телефона у меня нет<br>       
+        <h1>&#128062; Как меня найти</h1>
+            &#127961; Город какой-то<br>
+            &#8962; Высокий белый дом<br>
+            &#9743; Телефона у меня нет<br>       
     </main>
     <footer>
         <hr>
-        <span>&#64 Этот сайт cоздала <del>хозяйка Фрейдис</del> маленькая Фрейдис</span>
+        <span>&#64; Этот сайт cоздала <del>хозяйка Фрейдис</del> маленькая Фрейдис</span>
     </footer>
 </body>
 </html>
