--- a/site/pages/about.html
+++ b/site/pages/about.html
@@ -12,20 +12,20 @@
         <a href="../pages/contacts.html">Контакты</a>
     </header>
     <main>
-        <h2 title="Всем привет!">&#128062 Обо мне</h2>
+        <h2 title="Всем привет!">&#128062; Обо мне</h2>
         <p> Я самая обыкновенная маленькая котейка, с огромными зелеными глазами, темно-коричневым окрасом и белым подшерстком. Хоть я и не породистая, но очень красивая.<br>
         Сейчас я живу в теплой и уютной квартире, но так было не всегда. Видимо прошлые хозяева были не очень довольны фактом моего рождения, поэтому выкинули меня на заправке<br>
         Зимой меня подкармливали добрые люди, и вот однажды, меня взяли на ручки, посадили в теплую машину и увезли в уютный дом. Так началась моя новая, счастливая жизнь<br>
         </p>
         <img src="../images/cat_2.jpeg" alt="Кошка на диване"> 
-        <h2>&#128062 Мои друзья</h2>
+        <h2>&#128062; Мои друзья</h2>
         <p>Помимо меня, в моем жилом помещении живет еще пес Кори, и мои хозяева. Я им разрешаю там жить, ведь они хорошие! С Кори мы ежедневно устраиваем вечерение и ночные тыгыдыки<br>
         А еще я постоянно пью воду из миски Кори, так как в моей вода менее вкусная.
         Хозяева меня кормят и гладят, часто я люблю лежать на ноутбуке или сидеть напротив телека. Мои любимые моменты, это когда хозяева заказывают еду и со стола можно что-то стырить<br>
         Обожаю этот момент, стоит им ненадолго отвлечься, я резко запрыгиваю на стол, молниеносно хватаю первую попавшуюся на глаза вкусняшку и убегаю! Особенно здорово, если это что-то с рыбой<br>
         Люблю рыбку!</p>
         <img src="../images/dog.jpg" alt="Собака на диване"> 
-        <h2>&#128062 Один день из моей жизни</h2>
+        <h2>&#128062; Один день из моей жизни</h2>
         <p>Теперь как и обещала, расскажу об одном дне из моей жизни!<br>
         Утро у меня начинается с пробуждения одного из хозяев. Как только я слышу как кто-то из них начинает подавать признаки жизни, то запрыгиваю на кровать и начинаю громко мяукать!<br>
         Когда они встают, я бегу за ними на кухню, и громко требую, чтобы меня угостили чем-то с завтрака. Вкусно покушав, я отправляюсь спать.<br>
@@ -39,7 +39,7 @@
     <footer>
         <!--<p>Были использованы спецсимволы</p>-->
         <hr>
-        <span>&#64 Этот сайт cоздала <del>хозяйка Фрейдис</del> маленькая Фрейдис</span>
+        <span>&#64; Этот сайт cоздала <del>хозяйка Фрейдис</del> маленькая Фрейдис</span>
     </footer>
 </body>
 </html>
